--- a/index.html
+++ b/index.html
@@ -1,170 +1,119 @@
 <!DOCTYPE html>
-<html>
+<html lang="zh-Hant">
 <head>
-  <title>3公里內美食搜尋</title>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>餐廳探索器</title>
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
   <style>
-    body { font-family: Arial, sans-serif; text-align: center; margin-top: 20px; }
-    #map { height: 400px; width: 100%; margin-top: 20px; }
-    select, input, button { margin: 5px; padding: 5px; }
+    #map { height: 400px; width: 100%; }
+    @media (max-width: 576px) {
+      #map { height: 300px; }
+    }
   </style>
 </head>
-<body>
+<body class="bg-light">
+  <div class="container py-4">
+    <h1 class="text-center mb-4">🍽️ 餐廳探索器</h1>
 
-  <h1>附近3公里內的餐廳搜尋</h1>
+    <div class="row g-3 mb-3">
+      <div class="col-sm-6 col-md-4">
+        <input type="text" id="keyword" class="form-control" placeholder="輸入餐廳名稱">
+      </div>
+      <div class="col-sm-4 col-md-3">
+        <select id="rating" class="form-select">
+          <option value="4">⭐ 4星以上</option>
+          <option value="4.5">⭐ 4.5星以上</option>
+          <option value="5">⭐ 5星</option>
+        </select>
+      </div>
+      <div class="col-sm-2 d-grid">
+        <button class="btn btn-primary" onclick="searchNearby()">搜尋</button>
+      </div>
+      <div class="col-sm-12 col-md-3 d-grid">
+        <button class="btn btn-success" onclick="searchRandom()">我不知道吃什麼 🎲</button>
+      </div>
+    </div>
 
-  <label for="rating">評價星數：</label>
-  <select id="rating">
-    <option value="4">4星以上</option>
-    <option value="4.5">4.5星以上</option>
-    <option value="5">5星</option>
-  </select>
-
-  <br>
-
-  <label for="name">餐廳名稱查詢：</label>
-  <input type="text" id="name" placeholder="輸入餐廳名稱">
-
-  <br>
-
-  <button onclick="searchNearby()">搜尋</button>
-  <button onclick="searchRandom()">隨機推薦</button>
-  <button onclick="getCurrentLocation()">📍定位我</button>
-
-  <div id="map"></div>
+    <div id="map" class="mb-3"></div>
+    <ul id="results" class="list-group"></ul>
+  </div>
 
   <script>
-    let map;
-    let service;
-    let infowindow;
-    let currentLocation;
-    let markers = [];
+    let map, service, userPos;
 
     function initMap() {
-      // 先以台北101為預設
-      currentLocation = new google.maps.LatLng(25.033964, 121.564468);
-
-      map = new google.maps.Map(document.getElementById('map'), {
-        center: currentLocation,
-        zoom: 15
-      });
-
-      infowindow = new google.maps.InfoWindow();
-
-      // 預設取得使用者位置
-      getCurrentLocation();
-    }
-
-    function getCurrentLocation() {
       if (navigator.geolocation) {
-        navigator.geolocation.getCurrentPosition(position => {
-          currentLocation = new google.maps.LatLng(position.coords.latitude, position.coords.longitude);
-          map.setCenter(currentLocation);
+        navigator.geolocation.getCurrentPosition((position) => {
+          userPos = new google.maps.LatLng(position.coords.latitude, position.coords.longitude);
 
-          // 在地圖上放一個 marker 表示「你的位置」
-          clearMarkers();
-          const userMarker = new google.maps.Marker({
-            map: map,
-            position: currentLocation,
-            icon: {
-              url: "http://maps.google.com/mapfiles/ms/icons/blue-dot.png"
-            }
+          map = new google.maps.Map(document.getElementById('map'), {
+            center: userPos,
+            zoom: 15
           });
-          markers.push(userMarker);
-        }, () => {
-          alert('無法取得你的定位，請確認有開啟定位權限');
+
+          new google.maps.Marker({
+            position: userPos,
+            map,
+            label: '你的位置'
+          });
         });
       } else {
-        alert('你的瀏覽器不支援定位功能');
+        alert("無法取得位置");
       }
     }
 
     function searchNearby() {
-      const rating = parseFloat(document.getElementById('rating').value);
-      const name = document.getElementById('name').value;
+      const ratingFilter = parseFloat(document.getElementById("rating").value);
+      const keyword = document.getElementById("keyword").value;
 
       const request = {
-        location: currentLocation,
+        location: userPos,
         radius: 3000,
-        type: ['restaurant'],
-        keyword: name || undefined
+        keyword: keyword || undefined,
+        type: 'restaurant'
       };
 
       service = new google.maps.places.PlacesService(map);
       service.nearbySearch(request, (results, status) => {
         if (status === google.maps.places.PlacesServiceStatus.OK) {
-          map.setCenter(currentLocation);
-          clearMarkers();
-          let found = 0;
-          for (let i = 0; i < results.length; i++) {
-            if (results[i].rating >= rating) {
-              createMarker(results[i]);
-              found++;
-            }
-          }
-          if (found === 0) {
-            alert('找不到符合條件的餐廳');
-          }
+          displayResults(results.filter(r => r.rating >= ratingFilter));
         }
       });
     }
 
     function searchRandom() {
-      const rating = parseFloat(document.getElementById('rating').value);
-
       const request = {
-        location: currentLocation,
+        location: userPos,
         radius: 3000,
-        type: ['restaurant']
+        type: 'restaurant'
       };
 
       service = new google.maps.places.PlacesService(map);
       service.nearbySearch(request, (results, status) => {
         if (status === google.maps.places.PlacesServiceStatus.OK) {
-          const filtered = results.filter(r => r.rating >= rating);
-          if (filtered.length === 0) {
-            alert('找不到符合條件的餐廳');
-            return;
-          }
-          const randomPlace = filtered[Math.floor(Math.random() * filtered.length)];
-          map.setCenter(randomPlace.geometry.location);
-          clearMarkers();
-          createMarker(randomPlace);
-
-          // 顯示餐廳名字 + 評價 + 食物類型
-          let types = randomPlace.types.filter(t => t !== "restaurant" && t !== "food" && t !== "point_of_interest" && t !== "establishment");
-          let typeText = types.length > 0 ? "｜類型: " + types.join(", ") : "";
-
-          infowindow.setContent(randomPlace.name + "<br>評價: " + randomPlace.rating + "<br>" + typeText);
-          infowindow.open(map);
+          const filtered = results.filter(r => r.rating >= 4);
+          const random = filtered[Math.floor(Math.random() * filtered.length)];
+          displayResults([random]);
         }
       });
     }
 
-    function createMarker(place) {
-      const marker = new google.maps.Marker({
-        map: map,
-        position: place.geometry.location
+    function displayResults(places) {
+      const list = document.getElementById("results");
+      list.innerHTML = "";
+      places.forEach(place => {
+        new google.maps.Marker({ map, position: place.geometry.location });
+        const li = document.createElement("li");
+        li.className = "list-group-item";
+        li.textContent = `${place.name} (${place.rating}⭐)`;
+        list.appendChild(li);
       });
-      google.maps.event.addListener(marker, 'click', () => {
-        let types = place.types.filter(t => t !== "restaurant" && t !== "food" && t !== "point_of_interest" && t !== "establishment");
-        let typeText = types.length > 0 ? "｜類型: " + types.join(", ") : "";
-        infowindow.setContent(place.name + "<br>評價: " + place.rating + "<br>" + typeText);
-        infowindow.open(map, marker);
-      });
-      markers.push(marker);
-    }
-
-    function clearMarkers() {
-      for (let i = 0; i < markers.length; i++) {
-        markers[i].setMap(null);
-      }
-      markers = [];
     }
   </script>
 
   <script async defer
     src="https://maps.googleapis.com/maps/api/js?key=AIzaSyD7JiHggis66nCLaEszgv4Np_YVL4t9qVI&libraries=places&callback=initMap">
   </script>
-
 </body>
 </html>
