--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>餐廳探索器</title>
+  <title>Find Some Foods</title>
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
   <style>
     #map { height: 400px; width: 100%; }
@@ -14,24 +14,25 @@
 </head>
 <body class="bg-light">
   <div class="container py-4">
-    <h1 class="text-center mb-4">🍽️ 餐廳探索器</h1>
+    <h1 class="text-center mb-4">🍽️ Eater</h1>
 
     <div class="row g-3 mb-3">
       <div class="col-sm-6 col-md-4">
-        <input type="text" id="keyword" class="form-control" placeholder="輸入餐廳名稱">
+        <input type="text" id="keyword" class="form-control" placeholder="Enter restaurant name">
       </div>
       <div class="col-sm-4 col-md-3">
         <select id="rating" class="form-select">
-          <option value="4">⭐ 4星以上</option>
-          <option value="4.5">⭐ 4.5星以上</option>
-          <option value="5">⭐ 5星</option>
+          <option value="3">⭐ 3 stars or above</option>
+          <option value="4">⭐ 4 stars or above</option>
+          <option value="4.5">⭐ 4.5 stars or above</option>
+          <option value="5">⭐ 5 stars or above</option>
         </select>
       </div>
       <div class="col-sm-2 d-grid">
-        <button class="btn btn-primary" onclick="searchNearby()">搜尋</button>
+        <button class="btn btn-primary" onclick="searchNearby()">Search</button>
       </div>
       <div class="col-sm-12 col-md-3 d-grid">
-        <button class="btn btn-success" onclick="searchRandom()">我不知道吃什麼 🎲</button>
+        <button class="btn btn-success" onclick="searchRandom()">Whatever lah 🎲</button>
       </div>
     </div>
 
@@ -55,11 +56,11 @@
           new google.maps.Marker({
             position: userPos,
             map,
-            label: '你的位置'
+            label: 'your location'
           });
         });
       } else {
-        alert("無法取得位置");
+        alert("Unable to obtain location");
       }
     }
 
@@ -92,7 +93,7 @@
       service = new google.maps.places.PlacesService(map);
       service.nearbySearch(request, (results, status) => {
         if (status === google.maps.places.PlacesServiceStatus.OK) {
-          const filtered = results.filter(r => r.rating >= 4);
+          const filtered = results.filter(r => r.rating >= 3);
           const random = filtered[Math.floor(Math.random() * filtered.length)];
           displayResults([random]);
         }
