--- a/index.html
+++ b/index.html
@@ -1,154 +1,149 @@
 <!DOCTYPE html>
-<html lang="en">
-<head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Find Some Foods</title>
-  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
-  <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
-  <style>
-    #map { height: 400px; width: 100%; }
-    @media (max-width: 576px) {
-      #map { height: 300px; }
-    }
-  </style>
-</head>
-<body class="bg-light">
-  <div class="container py-4">
-    <h1 class="text-center mb-4">🍽️ Eater</h1>
-
-    <div class="row g-3 mb-3">
-      <div class="col-sm-6 col-md-4">
-        <input type="text" id="keyword" class="form-control" placeholder="Enter restaurant name">
-      </div>
-      <div class="col-sm-4 col-md-3">
-        <select id="rating" class="form-select">
-          <option value="3">⭐ 3 stars or above</option>
-          <option value="4">⭐ 4 stars or above</option>
-          <option value="4.5">⭐ 4.5 stars or above</option>
-          <option value="5">⭐ 5 stars or above</option>
-        </select>
-      </div>
-      <div class="col-sm-2 d-grid">
-        <button class="btn btn-primary" onclick="searchNearby()">Search</button>
-      </div>
-      <div class="col-sm-12 col-md-3 d-grid">
-        <button class="btn btn-success" onclick="searchRandom()">Whatever lah 🎲</button>
-      </div>
+<html>
+  <head>
+    <title>Nearby Restaurants</title>
+    <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
+    <style>
+      #map {
+        height: 400px;
+        width: 100%;
+      }
+      .controls {
+        margin: 10px 0;
+      }
+    </style>
+  </head>
+  <body>
+    <h2>🍽️ Finder</h2>
+    <div class="controls">
+      Minimum Rating:
+      <select id="rating">
+        <option value="0">Any</option>
+        <option value="3">3+</option>
+        <option value="3.5">3.5+</option>
+        <option value="4">4+</option>
+        <option value="4.5">4.5+</option>
+      </select>
+      <button onclick="searchPlaces()">Search</button>
+      <button onclick="searchRandom()">Whatever lah 🎲</button>
     </div>
+    <div id="map"></div>
+    <ul id="results"></ul>
 
-    <div id="map" class="mb-3"></div>
-    <ul id="results" class="list-group"></ul>
-  </div>
+    <script>
+      let map, service, infowindow, userPos;
 
-  <script>
-    let map, service, userPos;
+      function initMap() {
+        if (navigator.geolocation) {
+          navigator.geolocation.getCurrentPosition(
+            (position) => {
+              userPos = {
+                lat: position.coords.latitude,
+                lng: position.coords.longitude,
+              };
 
-    function initMap() {
-      navigator.geolocation.getCurrentPosition(pos => {
-        userPos = {
-          lat: pos.coords.latitude,
-          lng: pos.coords.longitude
+              map = new google.maps.Map(document.getElementById("map"), {
+                center: userPos,
+                zoom: 15,
+              });
+
+              infowindow = new google.maps.InfoWindow();
+              service = new google.maps.places.PlacesService(map);
+
+              new google.maps.Marker({
+                position: userPos,
+                map,
+                title: "You are here",
+              });
+            },
+            () => {
+              alert("Geolocation failed!");
+            }
+          );
+        } else {
+          alert("Your browser does not support geolocation.");
+        }
+      }
+
+      function searchPlaces() {
+        const rating = parseFloat(document.getElementById("rating").value);
+        const request = {
+          location: userPos,
+          radius: 3000,
+          type: ["restaurant"],
         };
-        map = new google.maps.Map(document.getElementById("map"), {
-          center: userPos,
-          zoom: 15
+
+        service.nearbySearch(request, (results, status) => {
+          if (status === google.maps.places.PlacesServiceStatus.OK) {
+            const filtered = results.filter((p) => p.rating >= rating);
+            displayResults(filtered);
+          }
         });
-        new google.maps.Marker({ position: userPos, map, label: "You" });
-        service = new google.maps.places.PlacesService(map);
-      });
-    }
+      }
 
-    function searchPlaces(keyword = null) {
-      const rating = parseFloat(document.getElementById("rating").value);
-      const userKeyword = keyword || document.getElementById("keyword").value.trim();
-      const request = {
-        location: userPos,
-        radius: 3000,
-        type: ["restaurant"]
-      };
-      if (userKeyword) request.keyword = userKeyword;
+      function searchRandom() {
+        const rating = parseFloat(document.getElementById("rating").value);
+        const request = {
+          location: userPos,
+          radius: 3000,
+          type: ["restaurant"],
+        };
 
-      service.nearbySearch(request, (results, status) => {
-        if (status === google.maps.places.PlacesServiceStatus.OK) {
-          const filtered = results.filter(place => !place.rating || place.rating >= rating);
-          displayResults(filtered);
-        }
-      });
-    }
+        service.nearbySearch(request, (results, status) => {
+          if (status === google.maps.places.PlacesServiceStatus.OK) {
+            const filtered = results.filter((p) => p.rating >= rating);
 
-    function searchNearby() {
-      searchPlaces();
-    }
+            if (filtered.length === 0) {
+              Swal.fire({
+                icon: "warning",
+                title: "Oops...",
+                text: "No restaurants found nearby!",
+              });
+              return;
+            }
 
-    function searchRandom() {
-      const rating = parseFloat(document.getElementById("rating").value);
-      const request = {
-        location: userPos,
-        radius: 3000,
-        type: ["restaurant"]
-      };
+            const randomPlace =
+              filtered[Math.floor(Math.random() * filtered.length)];
+            displayResults([randomPlace]);
 
-      service.nearbySearch(request, (results, status) => {
-        if (status === google.maps.places.PlacesServiceStatus.OK) {
-          // Allow restaurants without ratings
-          let filtered = results.filter(place => !place.rating || place.rating >= rating);
-
-          // If none matched, fallback to all results
-          if (filtered.length === 0) {
-            filtered = results;
+            Swal.fire({
+              icon: "success",
+              title: "Today's pick 🎉",
+              html: `<b>${randomPlace.name}</b><br>⭐ Rating: ${
+                randomPlace.rating || "N/A"
+              }<br>📍 ${randomPlace.vicinity || ""}`,
+            });
           }
+        });
+      }
 
-          if (filtered.length === 0) {
-            Swal.fire("😢 No restaurants found nearby!");
-            return;
-          }
+      function displayResults(places) {
+        const resultsList = document.getElementById("results");
+        resultsList.innerHTML = "";
+        places.forEach((place) => {
+          const li = document.createElement("li");
+          li.textContent = `${place.name} - ⭐ ${place.rating || "N/A"}`;
+          resultsList.appendChild(li);
 
-          // Pick a random one
-          const randomIndex = Math.floor(Math.random() * filtered.length);
-          const randomPlace = filtered[randomIndex];
-
-          // Show only this one in the list
-          displayResults([randomPlace]);
-
-          // Popup with SweetAlert2
-          Swal.fire({
-            title: "🎉 Let's eat here!",
-            html: `
-              <b>${randomPlace.name}</b><br>
-              Rating: ${randomPlace.rating || "N/A"} ⭐<br>
-              <a href="https://www.google.com/maps/dir/?api=1&origin=${userPos.lat},${userPos.lng}&destination=${randomPlace.geometry.location.lat()},${randomPlace.geometry.location.lng()}&travelmode=driving" target="_blank">🚗 Get Directions</a>
-            `,
-            icon: "success",
-            confirmButtonText: "Yummy 🍴"
+          const marker = new google.maps.Marker({
+            map,
+            position: place.geometry.location,
           });
-        }
-      });
-    }
 
-    function displayResults(places) {
-      document.getElementById("results").innerHTML = "";
-      places.forEach(place => {
-        const li = document.createElement("li");
-        li.className = "list-group-item";
-        li.innerHTML = `
-          <strong>${place.name}</strong><br>
-          Rating: ${place.rating || "N/A"} ⭐<br>
-          <a href="https://www.google.com/maps/dir/?api=1&origin=${userPos.lat},${userPos.lng}&destination=${place.geometry.location.lat()},${place.geometry.location.lng()}&travelmode=driving" target="_blank">🚗 Get Directions</a>
-        `;
-        document.getElementById("results").appendChild(li);
+          marker.addListener("click", () => {
+            infowindow.setContent(place.name);
+            infowindow.open(map, marker);
+          });
 
-        new google.maps.Marker({
-          position: place.geometry.location,
-          map,
-          title: place.name
+          map.setCenter(place.geometry.location);
         });
-      });
-    }
-  </script>
+      }
+    </script>
 
-  <script async defer
-    src="https://maps.googleapis.com/maps/api/js?key=AIzaSyD7JiHggis66nCLaEszgv4Np_YVL4t9qVI&libraries=places&callback=initMap">
-  </script>
-</body>
+    <script
+      src="https://maps.googleapis.com/maps/api/js?key=AIzaSyD7JiHggis66nCLaEszgv4Np_YVL4t9qVI&libraries=places&callback=initMap"
+      async
+      defer
+    ></script>
+  </body>
 </html>
