--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
         </select>
       </div>
       <div class="col-sm-2 d-grid">
-        <button class="btn btn-primary" onclick="searchNearby()">Search</button>
+        <button class="btn btn-primary" onclick="searchPlaces()">Search</button>
       </div>
       <div class="col-sm-12 col-md-3 d-grid">
         <button class="btn btn-success" onclick="searchRandom()">Whatever lah 🎲</button>
@@ -67,7 +67,8 @@
         type: ["restaurant"]
       };
       if (userKeyword) request.keyword = userKeyword;
-  
+      
+      service = new google.maps.places.PlacesService(map);
       service.nearbySearch(request, (results, status) => {
         if (status === google.maps.places.PlacesServiceStatus.OK) {
           const filtered = results.filter(place => place.rating >= rating);
@@ -84,6 +85,7 @@
         type: ["restaurant"]
       };
 
+      service = new google.maps.places.PlacesService(map);
       service.nearbySearch(request, (results, status) => {
         if (status === google.maps.places.PlacesServiceStatus.OK) {
           const filtered = results.filter(place => place.rating >= rating);
