--- a/index.html
+++ b/index.html
@@ -5,11 +5,14 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Find Some Foods</title>
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
+  <link href="https://cdn.jsdelivr.net/npm/sweetalert2@11/dist/sweetalert2.min.css" rel="stylesheet"/>
   <style>
     #map { height: 400px; width: 100%; }
     @media (max-width: 576px) {
       #map { height: 300px; }
     }
+    #results { margin-top: 10px; }
+    .restaurant { margin: 5px 0; padding: 8px; border: 1px solid #ccc; border-radius: 6px; }
   </style>
 </head>
 <body class="bg-light">
@@ -40,89 +43,128 @@
     <ul id="results" class="list-group"></ul>
   </div>
 
+  <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
   <script>
-    let map, service, userPos;
-  
-    function initMap() {
-      navigator.geolocation.getCurrentPosition(pos => {
-        userPos = {
-          lat: pos.coords.latitude,
-          lng: pos.coords.longitude
-        };
-        map = new google.maps.Map(document.getElementById("map"), {
-          center: userPos,
-          zoom: 15
-        });
-        new google.maps.Marker({ position: userPos, map, label: "You" });
-        service = new google.maps.places.PlacesService(map);
-      });
-    }
-  
-    function searchPlaces(keyword = null) {
-      const rating = parseFloat(document.getElementById("rating").value);
-      const userKeyword = keyword || document.getElementById("keyword").value.trim();
-      const request = {
-        location: userPos,
-        radius: 3000,
-        type: ["restaurant"]
-      };
-      if (userKeyword) request.keyword = userKeyword;
-      
-      service = new google.maps.places.PlacesService(map);
-      service.nearbySearch(request, (results, status) => {
-        if (status === google.maps.places.PlacesServiceStatus.OK) {
-          const filtered = results.filter(place => place.rating >= rating);
-          displayResults(filtered);
-        }
-      });
-    }
-  
-    function searchRandom() {
-      const rating = parseFloat(document.getElementById("rating").value);
-      const request = {
-        location: userPos,
-        radius: 3000,
-        type: ["restaurant"]
-      };
+    let map, userPos, placeLibrary;
 
-      service = new google.maps.places.PlacesService(map);
-      service.nearbySearch(request, (results, status) => {
-        if (status === google.maps.places.PlacesServiceStatus.OK) {
-          const filtered = results.filter(place => place.rating >= rating);
+    async function initMap() {
+      const { Map } = await google.maps.importLibrary("maps");
+      const { Place } = await google.maps.importLibrary("places");
 
-          if (filtered.length === 0) {
-            alert("😢 No restaurants found nearby!");
-            return;
+      placeLibrary = Place;
+
+      if (navigator.geolocation) {
+        navigator.geolocation.getCurrentPosition(
+          (pos) => {
+            userPos = {
+              lat: pos.coords.latitude,
+              lng: pos.coords.longitude
+            };
+
+            map = new Map(document.getElementById("map"), {
+              center: userPos,
+              zoom: 15
+            });
+
+            new google.maps.Marker({
+              position: userPos,
+              map: map,
+              label: "You"
+            });
+          },
+          () => {
+            alert("Failed to get your location");
           }
-
-          // 隨機挑一間
-          const randomIndex = Math.floor(Math.random() * filtered.length);
-          const randomPlace = filtered[randomIndex];
-
-          // 顯示結果（只顯示這間）
-          displayResults([randomPlace]);
-        }
-      });
+        );
+      } else {
+        alert("Geolocation is not supported by your browser");
+      }
     }
 
-  
+    async function searchPlaces() {
+      const rating = parseFloat(document.getElementById("rating").value);
+      const request = {
+        location: userPos,
+        radius: 3000,
+        type: ["restaurant"]
+      };
+
+      try {
+        const results = await placeLibrary.searchNearby(request);
+        const filtered = results.filter(place => place.rating >= rating);
+
+        if (filtered.length === 0) {
+          Swal.fire("No restaurants found nearby!", "Try lowering the rating filter.", "warning");
+          return;
+        }
+
+        displayResults(filtered);
+
+      } catch (error) {
+        console.error("Error searching restaurants:", error);
+        Swal.fire("Search failed", "Please try again later.", "error");
+      }
+    }
+
+    async function searchRandom() {
+      const rating = parseFloat(document.getElementById("rating").value);
+      const request = {
+        location: userPos,
+        radius: 3000,
+        type: ["restaurant"]
+      };
+
+      try {
+        const results = await placeLibrary.searchNearby(request);
+        const filtered = results.filter(place => place.rating >= rating);
+
+        if (filtered.length === 0) {
+          Swal.fire("No restaurants match your criteria!", "Try lowering the rating filter.", "warning");
+          return;
+        }
+
+        const randomIndex = Math.floor(Math.random() * filtered.length);
+        const randomPlace = filtered[randomIndex];
+        displayResults([randomPlace]);
+
+        // SweetAlert with Navigate option
+        Swal.fire({
+          title: "Today's Pick 🎉",
+          html: `<b>${randomPlace.name}</b><br>⭐ Rating: ${randomPlace.rating || "N/A"}<br>📍 ${randomPlace.vicinity || ""}`,
+          icon: "success",
+          showCancelButton: true,
+          confirmButtonText: "Navigate",
+          cancelButtonText: "Cancel"
+        }).then((result) => {
+          if (result.isConfirmed) {
+            const url = `https://www.google.com/maps/dir/?api=1&origin=${userPos.lat},${userPos.lng}&destination=${randomPlace.geometry.location.lat()},${randomPlace.geometry.location.lng()}&travelmode=driving`;
+            window.open(url, "_blank");
+          }
+        });
+
+      } catch (error) {
+        console.error("Error picking random restaurant:", error);
+        Swal.fire("Recommendation failed", "Please try again later.", "error");
+      }
+    }
+
     function displayResults(places) {
-      document.getElementById("results").innerHTML = "";
-      places.forEach(place => {
-        const li = document.createElement("li");
-        li.className = "list-group-item";
-        li.innerHTML = `
-          <strong>${place.name}</strong><br>
-          Rating：${place.rating || "N/A"} ⭐<br>
-          <a href="https://www.google.com/maps/dir/?api=1&origin=${userPos.lat},${userPos.lng}&destination=${place.geometry.location.lat()},${place.geometry.location.lng()}&travelmode=driving" target="_blank">🚗 導航</a>
-        `;
-        document.getElementById("results").appendChild(li);
-  
+      const resultsDiv = document.getElementById("results");
+      resultsDiv.innerHTML = "";
+
+      places.forEach((place) => {
+        const div = document.createElement("div");
+        div.className = "restaurant";
+        div.innerHTML = `<strong>${place.name}</strong><br>Rating: ${place.rating || "N/A"}<br>Address: ${place.vicinity || "N/A"}`;
+        resultsDiv.appendChild(div);
+
         new google.maps.Marker({
           position: place.geometry.location,
-          map,
+          map: map,
           title: place.name
         });
+
+        map.setCenter(place.geometry.location);
       });
     }
   </script>
